--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+2&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/4f5ece0701.js" crossorigin="anonymous"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -39,6 +40,13 @@
                 <p class="text-center" style="font-family: 'Baloo 2', serif;margin-bottom: 65px;margin-top: -27px;">That one Discord bot with fully open-source slash powers!</p>
             </div>
             <div class="buttons">
+                <a class="btn btn-primary text-lowercase" role="button" href="#">
+                    <button class="btn" style="color: rgb(152, 152, 152)">
+                        <i class="fa-solid fa-book" style="font-size: 15px; margin-right: 13px;"></i>
+                        docs
+                    </button>
+                </a>
+                
                 <button class="btn btn-light" type="button" style="font-size: 20px; color: rgb(152, 152, 152); background: rgb(17,17,17); border-radius: 60px;">
                     <i class="fa fa-i-cursor" style="margin-right: 13px;"></i>
                     soon! :D
@@ -46,14 +54,13 @@
                 
                 <a class="btn btn-primary text-lowercase" role="button" href="https://github.com/IgKniteDev/IgKnite">
                     <button class="btn" style="color: rgb(152, 152, 152)">
-                        <i class="fas fa-code-branch" style="font-size: 15px; margin-right: 13px;"></i>
+                        <i class="fa-solid fa-code-branch" style="font-size: 15px; margin-right: 13px;"></i>
                         github
                     </button>
                 </a>
             </div>
         </div>
     </section>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
 </html>
