Added injection link.

--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
                     </button>
                 </a>
                 
-                <button class="btn btn-light" type="button" style="font-size: 20px; color: rgb(152, 152, 152); background: rgb(17,17,17); border-radius: 60px;">
-                    <i class="fa fa-i-cursor" style="margin-right: 13px;"></i>
-                    soon! :D
-                </button>
+                <a class="btn btn-light text-lowercase" role="button" href="https://discord.com/api/oauth2/authorize?client_id=1016637486702792735&permissions=1505385246135&scope=bot%20applications.commands">
+                    <button class="btn" style="font-size: 20px; color: rgb(152, 152, 152); background: rgb(17,17,17); border-radius: 60px;">
+                        <i class="fa fa-i-cursor" style="margin-right: 13px;"></i>
+                        soon! :D
+                    </button>
+                </a>
                 
                 <a class="btn btn-primary text-lowercase" role="button" href="https://github.com/IgKniteDev/IgKnite">
                     <button class="btn" style="color: rgb(152, 152, 152)">
