--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-light text-lowercase" role="button" href="https://discord.com/api/oauth2/authorize?client_id=1016637486702792735&permissions=1505385246135&scope=bot%20applications.commands">
                     <button class="btn" style="font-size: 20px; color: rgb(152, 152, 152); background: rgb(17,17,17); border-radius: 60px;">
                         <i class="fa fa-i-cursor" style="margin-right: 13px;"></i>
-                        soon! :D
+                        inject
                     </button>
                 </a>
                 
