--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="text-center" style="font-family: 'Baloo 2', serif;margin-bottom: 65px;margin-top: -27px;">That one Discord bot with fully open-source slash powers!</p>
             </div>
             <div class="buttons">
-                <a class="btn btn-primary text-lowercase" role="button" href="https://github.com/IgKniteDev/documentation">
+                <a class="btn btn-primary text-lowercase" role="button" href="https://igknitedev.github.io/docs">
                     <button class="btn" style="color: rgb(152, 152, 152)">
                         <i class="fa-solid fa-book" style="font-size: 15px; margin-right: 13px;"></i>
                         docs
