--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center" style="font-family: 'Dancing Script', serif;color: rgba(255,255,255,0.34);font-size: 70.1px;">IgKnite</h2>
-                <p class="text-center" style="font-family: 'Baloo 2', serif;margin-bottom: 65px;margin-top: -27px;">That one Discord bot with fully open-source slash powers!</p>
+                <p class="text-center" style="font-family: 'Baloo 2', serif;margin-bottom: 65px;margin-top: -27px;">The Swiss Army Knife for Moderation / Music on Discord</p>
             </div>
             <div class="buttons">
                 <a class="btn btn-primary text-lowercase" role="button" href="https://igknitedev.github.io/docs">
